--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Move the square</title>
     <meta charset="utf-8">
     <!-- Import Google Icon Font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Import materialize.css -->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen"/>
     <!-- Let browser know website is optimized for mobile -->
-    <link type="text/css" rel="stylesheet" href="css/custom_ag.css"></script>
+    <link type="text/css" rel="stylesheet" href="css/custom_ag.css"/>
     <!-- Import Icons -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Import custom_ag.css -->
@@ -76,7 +76,7 @@
             <a class="grey-text text-lighten-4" href="http://www.hwupgrade.it/" title="Hardware Upgrade - hardware, mobile, videogiochi, fotografia, software, mercato, server, auto, smarthome e TVtech" target="_blank">Hardware Upgrade</a> &#8226;
             <a class="grey-text text-lighten-4" href="https://www.tomshw.it/" title="Tom's Hardware - hardware, videogiochi, Android, Apple, Windows, portatili, software, business, cultura, scienze, sicurezza" target="_blank">Tom's Hardware</a> &#8226;
             <a class="grey-text text-lighten-4" href="http://www.creativecommons.it/" title="Creative Commons" target="_blank">Creative Commons</a> &#8226;
-            <a class="grey-text text-lighten-4" hre &#8226;f="https://www.w3schools.com/default.asp" title="w3schools" target="_blank">w3schools</a> &#8226;
+            <a class="grey-text text-lighten-4" href="https://www.w3schools.com/default.asp" title="w3schools" target="_blank">w3schools</a> &#8226;
             <a class="grey-text text-lighten-4" href="http://jquery.com/" title="jquery" target="_blank">jquery</a> &#8226;
             <a class="grey-text text-lighten-4" href="http://www.html.it/" title="html.it" target="_blank">html</a> &#8226;
             <a class="grey-text text-lighten-4" href="http://php.net/" title="php" target="_blank">php</a> &#8226;
@@ -96,8 +96,8 @@
     <!-- Import jQuery 3.x snippet -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- JavaScript at end of body for optimized loading -->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="js/materialize.min.js"></script>
     <!-- Import custom_ag.js -->
-    <script type="text/javascript" src="js/custom_ag.js"></script>
+    <script src="js/custom_ag.js"></script>
   </body>
 </html>        
